Configuration of maximum fields, maximum field size, and maximum record size via record handler